Fix truncate class and add to trending anime

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -47,7 +47,6 @@ a {
 }
 
 .truncate {
-  margin-bottom: 0px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
