--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -198,7 +198,7 @@
         .trending-title {
           font-size: 18px;
           padding-bottom: 0px;
-          margin-bottom: 0px;
+          margin-bottom: 2px;
           display: block;
           margin-top: 7px;
           line-height: 15px;
